gobmkida/g2/do_compute_effective_worm_sizes
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1080:7: error: use of undeclared identifier 'unk_A54570'
v6 = &unk_A54570; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1113:17: error: use of undeclared identifier 'unk_A54570'
v13 = ( char *)&unk_A54570; 
                ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1148:7: error: use of undeclared identifier 'worms_2'
v22 = worms_2[0][v18 + v19]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1151:1: error: use of undeclared identifier 'worms_2'
worms_2[( int)v11][v20] = v22; 
^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1156:28: error: use of undeclared identifier 'worms_2'
while ( *( _DWORD *)v21 != worms_2[0][v18 + v19] ) 
                           ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1159:23: error: use of undeclared identifier 'unk_A539A4'
if ( v21 == ( char *)&unk_A539A4 + 144 * v11 + 4 * ( unsigned int)( v20 - 1) ) 
                      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1193:7: error: use of undeclared identifier 'worms_2'
v34 = worms_2[0][j + v28]; 
      ^
/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_compute_effective_worm_sizes/src/engine/worm.c:1233:12: error: use of undeclared identifier 'worms_2'
v25[v27] = worms_2[0][v27 + v23]; 
           ^
8 errors generated.
make: *** [/data/output_dir/patch/gobmk/ida/gcc/O2/gobmk-gcc-O2/do_compute_effective_worm_sizes/src/obj/1/worm.o] Error 1
